--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,5 +10,5 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=http://localhost:8000/api/auth/google/callback
 
-FRONTEND_ORIGIN=http://localhost:3000
-FRONTEND_GOOGLE_CALLBACK_URL=http://localhost:3000/google/callback
+FRONTEND_ORIGIN=http://localhost:5174
+FRONTEND_GOOGLE_CALLBACK_URL=http://localhost:5174/google/oauth/callback
