--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "seed": "ts-node src/seeders/role.seeder.ts",
     "dev": "ts-node-dev --files src/index.ts",
     "build": "tsc --skipLibCheck --noEmitOnError false && cp /package.json ./dist",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
