--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "seed": "ts-node src/seeders/role.seeder.ts",
     "dev": "ts-node-dev --files src/index.ts",
-    "build": "tsc --skipLibCheck --noEmitOnError false && cp /package.json ./dist",
+    "build": "tsc --skipLibCheck --noEmitOnError false && cp ./package.json ./dist",
     "start": "node dist/index.js",
     "check": "tsc --noEmit"
   },
